k8s/argocd-core/templates/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: tooling-gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "argocd.gustavo.inno-on.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-core-server
          port: 80
